오로라 깃허브 아이디 추가

--- a/2.Team_Doc.md
+++ b/2.Team_Doc.md
@@ -2,7 +2,7 @@
 - [ ]  학습관리시스템
 
 # 팀 정보
-- 팀원(githubID) : 곽원미, 박찬규, 오로라, 오태경
+- 팀원(githubID) : 곽원미, 박찬규, 오로라(roheerumi), 오태경
 - 팀규칙
     - 휴식시간 :
     - 의사결정 방식 :
