--- a/2.Team_Doc.md
+++ b/2.Team_Doc.md
@@ -7,7 +7,7 @@
     - 휴식시간 :
     - 의사결정 방식 :
 - 회고링크(github issue에 3일차에 작성)
-    - 곽원미 :Lalallal12
+    - 곽원미 :
     - 박찬규 : pak82666@gmail.com
     - 오로라 :
     - 오태경 : 
