--- a/4.ERD.md
+++ b/4.ERD.md
@@ -2,4 +2,4 @@
 - [dbdiagram.io](https://dbdiagram.io/home) 링크를 작성해주세요.
 - png Export된 파일을 레포지토리에 업로드하세요.
 
-ERD 링크 : `FILL_ME_IN`
+ERD 링크 : `FILL_ME_IN`https://dbdiagram.io/d/642a32b55758ac5f1726253a
