--- a/3.API.md
+++ b/3.API.md
@@ -11,7 +11,7 @@
 
 | Members | Description |
 | --- | --- |
-| PUT /users/:id | 사용자 개인정보 변경 |
+| PUT /users | 사용자 개인정보 변경 |
 | GET /classes | 모든 수업 조회  |
 | GET /classes/?user_id=user_id | 강의자로 수업 조회 |
 | GET /classes?name=name | 수업명으로 수업 조회  |
@@ -91,7 +91,7 @@
 
 ---
 
-## 사용자 개인정보 변경 PUT /users/:id
+## 사용자 개인정보 변경 PUT /users
 
 사용자는 이메일 정보와 같은 개인정보를 변경할 수 있습니다. 요청이 서버에 성공적으로 전달되면 200 OK를 반환합니다. 
 
