Data Model Description 수정, POST /classes 파라미터 수정

--- a/3.API.md
+++ b/3.API.md
@@ -30,7 +30,7 @@
 
 | Parameter | Description | Example |
 | --- | --- | --- |
-| Authorization | 사용자 인증 토큰값 | Bearer eyJhbGciOiJIUzI1NiIXVCJ9TJV...r7E20RMHrHDcEfxjoYZgeFONFh7HgQ |
+| Authorization | 사용자 인증 토큰값 | Bearer eyJhbGciOiJIUzI1NiIXVCJ9TJVr7E20RMHrHDcEfxjoYZgeFONFh7HgQ |
 
 ### Data Model
 
@@ -83,9 +83,9 @@
 
 | Field | Type | Description |
 | --- | --- | --- |
-| group | string | 사용자분류 |
-| code | string | 사용자별 상태코드 |
-| name | string | 사용자별 상태명 |
+| code_group | string | 코드분류 |
+| code | string | 코드 |
+| name | string | 코드명 |
 | reg_date | string | 등록 일시 |
 | mod_date | string | 수정 일시 |
 
@@ -349,7 +349,6 @@ HTTP Response code가 200 OK일 때 반환되는 응답 정보입니다.
 
 | Parameter | Type | Description |
 | --- | --- | --- |
-| id | number | 강의ID |
 | name | string | 강의명 |
 | category_id | number | 강의분류ID |
 
